Added run script generation from templates